force-app/main/default/objects/ProjectLineItem__c/ProjectLineItem__c.object-meta.xml
<CustomObject>
    <label>ProjectLineItem</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ProjectLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>