force-app/main/default/objects/ProjectLineItem__c/fields/AssignedHousxRol__c.field-meta.xml
<CustomField>
    <fullName>AssignedHousxRol__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AssignedHousxRol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>