force-app/main/default/objects/ProjectLineItem__c/fields/RequiredHoursxRol__c.field-meta.xml
<CustomField>
    <fullName>RequiredHoursxRol__c</fullName>
    <label>RequiredHoursxRol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>