force-app/main/default/objects/ProjectLineItem__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>