force-app/main/default/objects/ProjectLineItem__c/fields/SodlHoursToCover__c.field-meta.xml
<CustomField>
    <fullName>SodlHoursToCover__c</fullName>
    <formula>Project__r.Sold_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SodlHoursToCover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>